tests/pass/UnaryComplement.java
package pass;

import java.lang.System;

public class UnaryComplement {
    public int invert(int n) {
        return ~n;
    }

    public static void main(String[] args) {
        System.out.println(~2);
    }
}
