tests/fail/Remainder.java
package fail;

import java.lang.System;

public class Remainder{
    public static void main(String[] args){
        System.out.println('a'%42);
    }
}